--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "version": "1.0",
   "browser_action": {
     "default_icon": "icons/19x19.png",
-    "default_popup": "popup.html"
+    "default_popup": "html/popup.html"
   },
   "permissions": [
     "activeTab",
